petname (1.0) unreleased; urgency=medium

  * === added directory debian, === added directory debian/source, ===
    added directory etc, === added directory etc/petname, === added
    directory pkg, === added directory pkg/petname, === added directory
    usr, === added directory usr/bin, debian/compat, debian/control,
    debian/copyright, debian/install, debian/rules,
    debian/source/format, etc/petname/adjectives.txt,
    etc/petname/adverbs.txt, etc/petname/names.txt,
    pkg/petname/petname.go.in, pkg/petname/update.sh, usr/bin/petname:
    - initial build of the petname project
  * === added directory src, === removed directory pkg, === renamed
    directory pkg/petname => src/petname, src/petname/Makefile,
    src/petname/petname_test.go:
    - add a basic test case
    - add a basic Makefile
  * === added directory src/petname_cmd, src/petname_cmd/Makefile,
    src/petname_cmd/petname_cmd.go, src/petname/Makefile,
    src/petname/petname.go.in, src/petname/petname_test.go:
    - add Apache2 license headers
    - add a standalone go binary that uses the library
    - build

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 09 Dec 2014 17:40:31 -0600