@@ -2,12 +2,12 @@ Source: petname
 Section: admin
 Priority: optional
 Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
-Build-Depends: debhelper (>= 7.0.50~)
-Standards-Version: 3.9.4
+Build-Depends: debhelper (>= 7.0.50~), golang-go
+Standards-Version: 3.9.5
 Homepage: http://launchpad.net/petname
 
 Package: petname
-Architecture: all
+Architecture: amd64 i386
 Depends: ${misc:Depends}
 Description: generate pronouncable, perhaps even memorable, pet names
  This utility will generate "pet names", consisting of a random
@@ -16,3 +16,18 @@ Description: generate pronouncable, perhaps even memorable, pet names
  The default packaging contains about 2000 names, 1300 adjectives,
  and 4000 adverbs, yielding nearly 10 billion unique combinations,
  covering over 32 bits of unique namespace.
+ As such, PetName tries to follow the tenets of Zooko's triangle:
+ names are human meaningful, decentralized, and secure.
+
+Package: golang-petname-dev
+Architecture: all
+Depends: ${misc:Depends}
+Description: library for generating pronouncable, memorable, pet names
+ This package provides a library for generating "pet names", consisting
+ of a random combination of an adverb, adjective, and proper name.
+ These are useful for unique hostnames, for instance.
+ The default packaging contains about 2000 names, 1300 adjectives,
+ and 4000 adverbs, yielding nearly 10 billion unique combinations,
+ covering over 32 bits of unique namespace.
+ As such, PetName tries to follow the tenets of Zooko's triangle:
+ names are human meaningful, decentralized, and secure.
