@@ -1,0 +1,2 @@
+src/petname_cmd/petname usr/bin
+etc/
